add missing api response types
