# python/sidecar/projects/router.py
@@ -4,9 +4,13 @@ from fastapi import APIRouter
 from sidecar.projects import service
 from sidecar.projects.schemas import (
     ProjectCreateRequest,
+    ProjectCreateResponse,
+    ProjectDeleteResponse,
     ProjectDetailsResponse,
     ProjectFileTreeResponse,
+    ProjectStorageResponse,
 )
+from sidecar.typing import ResponseStatus
 
 router = APIRouter(
     prefix="/projects",
@@ -15,31 +19,25 @@ router = APIRouter(
 
 
 @router.get("/")
-async def list_projects():
+async def list_projects() -> ProjectStorageResponse:
     """
     Returns a list of projects for the current user
     """
     user_id = "user1"
-    projects_dict = service.read_project_path_storage(user_id)
-    return projects_dict
+    return service.read_project_path_storage(user_id)
 
 
 @router.post("/")
-async def create_project(req: ProjectCreateRequest):
+async def create_project(req: ProjectCreateRequest) -> ProjectCreateResponse:
     """
     Creates a project, and a directory in the filesystem
     """
     user_id = "user1"
     project_id = str(uuid4())
-    project_path = service.create_project(
+    project_item = service.create_project(
         user_id, project_id, req.project_name, req.project_path
     )
-    return {
-        project_id: {
-            "project_name": req.project_name,
-            "project_path": project_path,
-        }
-    }
+    return ProjectCreateResponse(id=project_id, **project_item.dict())
 
 
 @router.get("/{project_id}")
@@ -52,7 +50,7 @@ async def get_project(project_id: str) -> ProjectDetailsResponse:
 
 
 @router.delete("/{project_id}")
-async def delete_project(project_id: str):
+async def delete_project(project_id: str) -> ProjectDeleteResponse:
     """
     Deletes a project directory and all files in it
     """
@@ -60,16 +58,16 @@ async def delete_project(project_id: str):
     try:
         service.delete_project(user_id, project_id)
     except KeyError:
-        return {
-            "status": "error",
-            "message": "Project not found",
-            "project_id": project_id,
-        }
-    return {
-        "status": "success",
-        "message": "Project deleted",
-        "project_id": project_id,
-    }
+        return ProjectDeleteResponse(
+            status=ResponseStatus.ERROR,
+            message="Project not found",
+            project_id=project_id,
+        )
+    return ProjectDeleteResponse(
+        status=ResponseStatus.OK,
+        message="Project deleted",
+        project_id=project_id,
+    )
 
 
 @router.get("/{project_id}/files")
