# python/sidecar/projects/schemas.py
@@ -1,6 +1,6 @@
 from __future__ import annotations
 
-from sidecar.typing import RefStudioModel
+from sidecar.typing import RefStudioModel, ResponseStatus
 
 
 class FileEntryBase(RefStudioModel):
@@ -34,6 +34,27 @@ class ProjectCreateRequest(RefStudioModel):
     The path to the project directory. Only necessary for Desktop.
     For web, the project is stored in a private directory on the server.
     """
+
+
+class ProjectCreateResponse(RefStudioModel):
+    id: str
+    name: str
+    path: str
+
+
+class ProjectDeleteResponse(RefStudioModel):
+    status: ResponseStatus
+    message: str
+    project_id: str
+
+
+class ProjectStorageItem(RefStudioModel):
+    name: str
+    path: str
+
+
+class ProjectStorageResponse(RefStudioModel):
+    projects: dict[str, ProjectStorageItem]
 
 
 FolderEntry.update_forward_refs()
